--- a/requirements.txt
+++ b/requirements.txt
@@ -32,3 +32,16 @@ SQLAlchemy==2.0.41
 typing_extensions==4.14.0
 urllib3==2.5.0
 Werkzeug==3.1.3
+Flask==2.3.3
+Flask-CORS==4.0.0
+gspread==5.10.0
+google-auth==2.23.0
+google-auth-oauthlib==1.0.0
+google-auth-httplib2==0.1.0
+selenium==4.15.0
+schedule==1.2.0
+requests==2.31.0
+python-dotenv==1.0.0
+Werkzeug==2.3.7
+gunicorn==21.2.0
+psutil==5.9.5
