--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,34 @@
-Flask==2.3.3
-Flask-CORS==4.0.0
-gspread==5.10.0
-google-auth==2.23.0
-google-auth-oauthlib==1.0.0
-google-auth-httplib2==0.1.0
-selenium==4.15.0
-schedule==1.2.0
-requests==2.31.0
-python-dotenv==1.0.0
-Werkzeug==2.3.7
-gunicorn==21.2.0
-psutil==5.9.5
+beautifulsoup4==4.13.4
+blinker==1.9.0
+cachetools==5.5.2
+certifi==2025.7.14
+charset-normalizer==3.4.2
+click==8.2.1
+Flask==3.1.1
+flask-cors==6.0.0
+Flask-SQLAlchemy==3.1.1
+google-auth==2.40.3
+google-auth-oauthlib==1.2.2
+greenlet==3.2.3
+gspread==6.2.1
+httplib2==0.22.0
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.2
+oauth2client==4.1.3
+oauthlib==3.3.1
+pillow==11.3.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pyparsing==3.2.3
+requests==2.32.4
+requests-oauthlib==2.0.0
+rsa==4.9.1
+schedule==1.2.2
+six==1.17.0
+soupsieve==2.7
+SQLAlchemy==2.0.41
+typing_extensions==4.14.0
+urllib3==2.5.0
+Werkzeug==3.1.3
