--- a/whatsapp-automation/package.json
+++ b/whatsapp-automation/package.json
@@ -1,58 +1,49 @@
 {
   "name": "whatsapp-automation-sorteios",
-  "version": "2.0.0-detection",
-  "description": "Sistema de automação WhatsApp com detecção de desconexão",
+  "version": "1.0.0",
+  "description": "Sistema de automação de postagens de sorteios no WhatsApp",
   "main": "src/app.js",
   "scripts": {
-    "start": "node --experimental-global-webcrypto src/app.js",
-    "dev": "nodemon --experimental-global-webcrypto src/app.js",
-    "build": "npm rebuild sqlite3",
-    "postinstall": "npm rebuild sqlite3"
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js",
+    "test": "jest",
+    "migrate": "node src/scripts/migrate.js"
   },
-  "engines": {
-    "node": "20.x",
-    "npm": ">=9.0.0"
-  },
+  "keywords": ["whatsapp", "automation", "sorteios", "baileys"],
+  "author": "Murilo",
+  "license": "MIT",
   "dependencies": {
-    "@whiskeysockets/baileys": "6.7.8",
-    "express": "^4.18.2",
-    "morgan": "^1.10.0",
+    "@whiskeysockets/baileys": "^6.7.8",
+    "axios": "^1.7.7",
+    "bcryptjs": "^2.4.3",
+    "check-disk-space": "^3.4.0",
+    "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
-    "helmet": "^7.0.0",
-    "compression": "^1.7.4",
-    "sqlite3": "5.1.6",
-    "qrcode": "^1.5.3",
-    "qrcode-svg": "^1.1.0",
-    "winston": "^3.10.0",
-    "dotenv": "^16.3.1",
-    "multer": "^1.4.5-lts.1",
-    "sharp": "^0.32.5",
-    "jimp": "^0.22.10",
-    "canvas": "^2.11.2",
-    "node-cron": "^3.0.2",
-    "moment": "^2.29.4",
-    "axios": "^1.5.0",
-    "lodash": "^4.17.21",
-    "uuid": "^9.0.0",
-    "bcrypt": "^5.1.1",
+    "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.1.3",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "express-rate-limit": "^7.4.0",
+    "express-session": "^1.18.0",
+    "googleapis": "^140.0.1",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
-    "rate-limiter-flexible": "^2.4.2",
-    "express-validator": "^7.0.1",
-    "node-gyp": "^10.0.1"
-  },
-  "optionalDependencies": {
-    "better-sqlite3": "^9.2.2"
+    "morgan": "^1.10.0",
+    "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.14",
+    "prom-client": "^15.1.3",
+    "qrcode": "^1.5.4",
+    "qrcode-terminal": "^0.12.0",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.6",
+    "winston": "^3.14.2"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.4",
+    "supertest": "^7.0.0"
   },
-  "keywords": [
-    "whatsapp",
-    "automation",
-    "baileys",
-    "qr-code",
-    "detection"
-  ],
-  "author": "Murilo",
-  "license": "MIT"
+  "engines": {
+    "node": ">=20.0.0"
+  }
 }
