--- a/whatsapp-automation/package.json
+++ b/whatsapp-automation/package.json
@@ -25,6 +25,8 @@
     "express": "^4.19.2",
     "express-rate-limit": "^7.4.0",
     "express-session": "^1.18.0",
+    "ffmpeg-static": "^5.2.0",
+    "fluent-ffmpeg": "^2.1.2",
     "googleapis": "^140.0.1",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
@@ -34,6 +36,7 @@
     "prom-client": "^15.1.3",
     "qrcode": "^1.5.4",
     "qrcode-terminal": "^0.12.0",
+    "sharp": "^0.33.3",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.6",
     "winston": "^3.14.2"
