--- a/whatsapp-automation/package.json
+++ b/whatsapp-automation/package.json
@@ -33,6 +33,7 @@
     "morgan": "^1.10.0",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.14",
+    "pino": "^9.0.0",
     "prom-client": "^15.1.3",
     "qrcode": "^1.5.4",
     "qrcode-terminal": "^0.12.0",
