--- a/whatsapp-automation/package.json
+++ b/whatsapp-automation/package.json
@@ -9,7 +9,12 @@
     "test": "jest",
     "migrate": "node src/scripts/migrate.js"
   },
-  "keywords": ["whatsapp", "automation", "sorteios", "baileys"],
+  "keywords": [
+    "whatsapp",
+    "automation",
+    "sorteios",
+    "baileys"
+  ],
   "author": "Murilo",
   "license": "MIT",
   "dependencies": {
@@ -27,6 +32,7 @@
     "express-session": "^1.18.0",
     "fluent-ffmpeg": "^2.1.2",
     "ffmpeg-static": "^5.2.0",
+    "ffprobe-static": "^3.1.0",
     "googleapis": "^140.0.1",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
