--- a/bots/package.json
+++ b/bots/package.json
@@ -1,1 +1,11 @@
+{
+  "name": "service-b-bots",
+  "version": "1.0.0",
+  "private": true,
+  "scripts": { "start": "node index.js" },
+  "dependencies": {
+    "express": "^4.19.2",
+    "qrcode": "^1.5.3"
+  }
+}
 
